# KOTron

./: .gitignore  AStar.py  BMTron.py  BMTronGUI.py  Bot.py  BotCopy.py  MCTS.py  README.md  SaveState  UtilityGUI.py  kylan_moves_vs_troy.json  model_architectures.py  models.py  pytorch_models.py  random_testing.py  reinforcement_learning.py  requirements.txt  unit_testing.py  zero_pad_fix.py
AI/: AStar.py  Bot.py  MCTS.py  eval.py  model_architectures.py  old_architectures.py  pytorch_game_utils.py  pytorch_models.py  random_testing.py  reinforcement_learning.py
AI/old-monte-models/: reinforcement_model_6.pth
AI/tests/: test_utils.py
game/: BMTron.py  BMTronGUI.py  Bot.py  BotCopy.py  KyTron.py  SaveState  ko_tron.py  ko_tron_gui.py  random_testing.py
game_simulation_data/: game_sims06-02-16-37.json  game_sims06-02-16-50.json
python/: .gitignore  ideas.txt  tron_model.onnx
python/AI/: AStar.py  Bot.py  MCTS.py  algos.py  alpha_beta.py  basic_min_max.py  eval.py  example_usage_script.py  heuristic_bot.py  minimax.py  model_architectures_old.py  pytorch_game_utils.py  rl_utils.py  save_models_better.py  torch_script_learning.py  training.py  tron_model.py
python/ai/: AStar.py  MCTS.py  algos.py  export_models.py  minimax.py  model_architectures.py  training.py  tron_model.py
python/containers/: game_containers.py  game_schemas.py
python/game/: ko_tron.py  tron.py  tron_gui.py  utility_gui.py
python/tests/: test_utils.py  unit_testing.py
python/tron_io/: game_containers.py  to_proto.py  tron.proto
runs/converging/: events.out.tfevents.1685989045.DESKTOP-S5S7QDD.10408.0
runs/converging-no-temp-decay/: events.out.tfevents.1685998410.BiGGuMs.3484.0
runs/cubic-decay-temp-1-no-decay/: events.out.tfevents.1685999751.BiGGuMs.1584.0  events.out.tfevents.1685999855.BiGGuMs.11112.0
tron-python/: pyproject.toml
tron-python/models/: 20250801_mcts_v5_440.pth  20250801_mcts_v6_4590.pth  20250801_random_200k_pretrain.pth  20250810_5x5_random_init.pth
tron-python/scripts/y2024/2024_12_07_optimize/: fast_net_random_vs_fast_net_self.py  faster_net_vs_old_net.py
tron-python/scripts/y2024/2024_12_15_alpha_beta/: ab_profiling.py  lru_eval.py  train_from_scratch.py
tron-python/scripts/y2025/m03/protobuf/: ipc_example.py
tron-python/scripts/y2025/m05/experiments/: obstacles.py  train_transformer.py
tron-python/scripts/y2025/m06/make_random_data/: make_random_data.py  train_transformer.py
tron-python/scripts/y2025/m07/: import_testing.py  inspect_update_acc.py  iter_deep_prof.py  lru_cache_test.py  mcts.py  obstacles.py  obstacles_nnue.py  obstacles_nnue_h2h.py  obstacles_nnue_prof.py
tron-python/scripts/y2025/m08/: client.py  mcts_debug.py  mcts_train_h2h.py  server.py  spawn_clients.py
tron-python/scripts/y2025/m08/cnn/: exp_launcher.py  look_at_temps.py  make_random_init_model.py  make_starting_positions.py  mcts_train_5x5_cnn.py  understand_ucb1.py  visualize_mcts_tree.py
tron-python/scripts/y2025/m08/nnue/: client.py  gen_random_data.py  gen_random_data_5x5.py  mcts_train.py  mcts_train_5x5.py  server.py  spawn_clients.py
tron-python/scripts/y2025/m12/: compare_quant_evals.py  test_quant_nnue.py
tron-python/scripts/y2026/m03/: test_quant_nnue.py
tron-python/tests/: test_game.py  test_minimax.py  test_nnue.py  test_utils.py  unit_testing.py
tron-python/tron/: __init__.py  game.py
tron-python/tron/ai/: AStar.py  MCTS.py  algos.py  benchmarks.py  chat_gpt_transformers.py  export_models.py  heuristic_bot.py  minimax.py  nnue.py  quant_nnue.py  search.py  training.py  tron_model.py
tron-python/tron/game/: utility_gui.py
tron-python/tron/gui/: tron_gui.py  utility_gui.py
tron-python/tron/io/: game_containers.py  to_proto.py  tron_pb2.py
tron_rust/: Cargo.toml
tron_rust/src/: main.rs  models.rs  tron.rs
trust/: Cargo.toml  build.rs
trust/proto/: tron_pb.proto
trust/src/: algos.rs  game.rs  io.rs  lib.rs  main.rs  minimax.rs  models.rs  tron.rs
unit-testing/: UtilityGUI.py
unit_testing/: UtilityGUI.py
(+37 files in other folders)
