[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tron-python"                 # the name on PyPI
version = "0.1.0"                    # your initial release
description = "2D tron game + RL self-play and training"
readme = "README.md"                 
requires-python = ">=3.8"            
license = { text = "MIT" }           
authors = [
  { name = "Kylan O'Neal", email = "kylanoneal@gmail.com" }
]
dependencies = [
  "numpy>=1.25",
  "torch>=2.0"
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]
