[package]
name = "trust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
# ort = {version = "=2.0.0-rc.9", features = [ "cuda" ]}
tract-onnx = "0.21.8"
ndarray="0.16"
strum = "0.24"
strum_macros = "0.24"
rand = "0.8"
im = "15.0"
getrandom = {version="0.2", features=["js"]}
prost = "0.11"
prost-types = "0.11"
zmq = "0.10.0"


# tch = {version="0.18.1", path="../../tch-rs"}

winapi = {version = "0.3.9", features = ["libloaderapi"]}
anyhow = "1.0.94"
rayon = "1.10.0"
wasm-bindgen = "0.2.99"
once_cell = "1.16.0"
console_error_panic_hook = "0.1.7"

# [dev-dependencies]
# torch-sys = {version="0.18.1", path="../../tch-rs/torch-sys"}

[build-dependencies]
prost-build = "0.11"

[profile.release]
debug = true
